# osim_utils

./: .gitignore  pyproject.toml  read.py
osim_utils/: __init__.py  read.py  write.py
osim_utils/tools/: run_body_kinematics.py
